test/Fail/MissingDefinitionDataOrRec.agda

data U : Set
T : U -> Set
record V (u : U) (t : T u) : Set
